--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "tp_integrador_pw2_g3",
   "version": "1.0.0",
   "description": "Trabajo Integrador G3",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/FJTSYSTEMS2014/Tp_Integrador_PW2_G3#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bulma": "^0.9.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
